# MeMeMe

./: .gitignore  Cargo.toml  build.sh  level_schema.json  next.md
.zed/: settings.json
assets/: levels.ldtk
assets/levels/: entry_point.json  example.json  test_teleporter_is_teleporting_all_after_activation.json
assets/levels/game_jam/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  entry_point.json
assets/levels/tests/: dependencies.json  lever.json  pressure_plate_on_off.json  start_timer.json  teleporter_is_teleporting.json  teleporter_is_teleporting_all_after_activation.json  test_button.json  test_dependencies.json  test_lever.json  test_start_timer.json  test_switch.json  test_teleporter_is_teleporting.json  test_teleporter_is_teleporting_all_after_activation.json
doc/: readme.md.md
doc/components/: readme.md
level_parser/: Cargo.toml
level_parser/src/: ldtk_json.rs  lib.rs  map_repr.rs
maths/: Cargo.toml
maths/src/: lib.rs  vec2i.rs
src/: constantes.rs  game_state.rs  ghost.rs  ghost_actions.rs  main.rs  map.rs  player.rs  state.rs  time.rs
src/collision/: mod.rs  plugin.rs
src/collision/components/: collider.rs
src/collision/ressources/: collision_map.rs
src/items/: button.rs  dependencies.rs  door.rs  enterable.rs  event.rs  events.rs  ghost_only.rs  is_activated.rs  is_enabled.rs  is_on.rs  is_usable.rs  item.rs  level_teleporter.rs  lever.rs  mod.rs  people_on.rs  player_only.rs  plugin.rs  populate_items.rs  pressure_plate.rs  pressure_plate_on_off.rs  reset_level_items.rs  teleport.rs  teleporter.rs  win.rs
src/items/bundle/: button_bundle.rs  door_bundle.rs  item_bundle.rs  level_teleporter_bundle.rs  lever_bundle.rs  pressure_plate_bundle.rs  pressure_plate_on_off_bundle.rs  switch_bundle.rs  teleporter_bundle.rs
src/level/: level_state.rs  load_level.rs  mod.rs  plugin.rs  unload_level.rs
src/map_parser/: map_repr.rs  mod.rs
src/math/: vec2i.rs
src/menu/: loading_screen.rs
src/player/: actions.rs  events.rs  ghost_actions.rs  interact.rs  mod.rs  move_direction.rs  player.rs  plugin.rs
(+72 files in other folders)
