[package]
name = "me_me_me"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

#Enable small amount of optimisation in debug mode
[profile.dev]
opt-level = 1

# Enable high optimisation for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "^0.12", features = ["dynamic_linking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
bevy_asset_loader = "0.19.1"
